# synodl

./: .gitignore  .gitlab-ci.yml  CONTRIBUTING.md  Cargo.toml  ChangeLog  Makefile  README.md  configure.ac
extra/: client.py  fake_syno.py  fake_syno_2.py
src/: Makefile.am  cfg.c  cfg.h  curl.c  curl.h  ini.c  main.rs  syno.c  syno.h  synodl.c  ui-util.c  ui-util.h  ui.c  ui.h
src/syno/: api.rs  mod.rs  tls.rs
src/tests/: ui-util.c
src/ui/: addtask.rs  delete.rs  help.rs  mod.rs  taskdetails.rs  util.rs  widgets.rs
