[package]
name = "synodl"
version = "0.5.3"
edition = "2018"
homepage = "https://code.ott.net/synodl"
readme = "README.md"
authors = ["Stefan Ott"]
license = "GPL-3.0-only.txt"
keywords = ["download", "torrent", "synology", "nas"]
categories = ["command-line-utilities"]

[dependencies]
crossterm = "0.28.1"
dirs = "6.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_ini = "0.2.0"
serde_json = "1.0"
subprocess = "0.2.9"
tui = "0.19.0"
byte-unit = "5.1.6"
ureq = "3.0.9"
url = "2.3.1"
getopts = "0.2"
